Changing link to Lookup API

--- a/StockQuoteSample/index.html
+++ b/StockQuoteSample/index.html
@@ -29,7 +29,7 @@
 				<label>Try "AAPL" or "MSFT" or "GE":</label>
 				<input type="text" id="symbol" class="input-" placeholder="Enter symbol">
         		<button type="submit" class="btn btn-primary" data-loading-text="Loading quote data...">Get Quote</button>
-        		<span class="help-inline">Want more symbols? <a href="http://dev.markitondemand.com/#companylookup" target="_blank">Try our Lookup API</a>.</span>
+        		<span class="help-inline">Want more symbols? <a href="http://markitondemand.github.com/DataApis/LookupSample/" target="_blank">Try our Lookup API</a>.</span>
 			</form>
 
 			<p class="terms">Markit On Demand has provided these web services for limited purposes. <a href="http://dev.markitondemand.com/#termsofuse">Read the MIT License and full terms of use</a> before coding.</p>
