--- a/LookupSample/index.html
+++ b/LookupSample/index.html
@@ -11,7 +11,7 @@
 	<div class="row">
 		<div class="span12">
 			<div class="hero-unit">
-				<h2>Markit On Demand &mdash; Lookup API Sample</h2>
+				<h2>Markit On Demand &mdash; Company Lookup API Sample</h2>
 
 				<p>The Company Lookup API is useful for determining the stock ticker or symbol a company&rsquo;s stock is traded with. For example, Google&rsquo;s symbol is <a href="http://www.google.com/finance?q=GOOG">GOOG</a>. Apple&rsquo;s is <a href="http://www.google.com/finance?q=AAPL">AAPL</a>. To use <a href="http://dev.markitondemand.com/">our APIs</a>, a symbol is required as one of the inputs. The Company Lookup API response includes the company&rsquo;s symbol, its full name, and the exchange it&rsquo;s traded on.</p>
 
