--- a/LookupSample/index.html
+++ b/LookupSample/index.html
@@ -15,7 +15,7 @@
 
 				<p>The Company Lookup API is useful for determining the stock ticker or symbol a company&rsquo;s stock is traded with. For example, Google&rsquo;s symbol is <a href="http://www.google.com/finance?q=GOOG">GOOG</a>. Apple&rsquo;s is <a href="http://www.google.com/finance?q=AAPL">AAPL</a>. To use <a href="http://dev.markitondemand.com/">our APIs</a>, a symbol is required as one of the inputs. The Company Lookup API response includes the company&rsquo;s symbol, its full name, and the exchange it&rsquo;s traded on.</p>
 
-				<p><a href="http://dev.markitondemand.com/#companylookup">Read the Lookup API documentation</a> or check out <a href="http://dev.markitondemand.com/">our other data APIs</a>.
+				<p><a href="http://dev.markitondemand.com/#companylookup">Read the Lookup API documentation</a> or check out <a href="http://dev.markitondemand.com/">our other data APIs</a>.</p>
 
 				<p><iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=markitondemand&amp;type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="177px" height="20px"></iframe></p>
 			</div>
