--- a/StockQuoteSample/index.html
+++ b/StockQuoteSample/index.html
@@ -17,7 +17,10 @@
 
 				<p><a href="http://dev.markitondemand.com/#stockquote">Read the Stock Quote API documentation</a> or check out <a href="http://dev.markitondemand.com/">our other data APIs</a>.</p>
 
-				<p><iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=markitondemand&amp;type=follow&amp;size=" allowtransparency="true" frameborder="0" scrolling="0" width="177px" height="20px"></iframe></p>
+				<p><iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=markitondemand&amp;type=follow&amp;size=" allowtransparency="true" frameborder="0" scrolling="0" width="177px" height="20px"></iframe> 
+
+				<a href="https://twitter.com/markitondemand" class="twitter-follow-button" data-show-count="false">Follow @markitondemand</a> 
+</p>
 			</div>
 		</div>
 	</div>
@@ -39,10 +42,10 @@
 
 <footer class="footer"><div class="container"><div class="row"><div class="span12"><div class="pull-left"><p>Copyright &copy; 2012 Markit Group Limited. ALL DATA PROVIDED AS IS, WITH NO WARRANTIES. All rights reserved.</p><ul class="unstyled row-fluid"><li><a target="_blank" href="http://www.markit.com/en/about/legal/privacy-policy.page">Privacy Policy</a></li><li><a class="termsButton" target="_blank" href="http://www.markit.com/en/about/legal/terms-of-use.page">Terms of Use</a></li><li><a target="_blank" href="http://www.markit.com/en/about/legal/disclaimer.page">Disclaimer</a></li><li><a target="_blank" href="http://www.markit.com/en/about/contact/contact-us.page">Contact us</a></li></ul></div><div class="pull-right logo"></div></div></div></div></footer>
 
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 <script type="text/javascript" src="resources/bootstrap.min.js"></script>
 <script type="text/javascript" src="resources/QuoteService.js"></script>
-
 <script type="text/javascript">
 
 	$(function(){
@@ -56,8 +59,10 @@
 			e.preventDefault();
 
 			$("button").button("loading");
-			
-			new Markit.QuoteService($("#symbol").val(), function(jsonResult) {
+
+			var ticker = $("#symbol").val();
+
+			new Markit.QuoteService(ticker, function(jsonResult) {
 				
 				this.clearResult();
 
@@ -97,13 +102,12 @@
 		$("form").after($container);
 		$container.fadeIn('fast');
 		this.resetForm();
-		console.log(jsonResult.Data)
 	};
 
 	Markit.QuoteService.prototype.renderAlert = function(jsonResult){
 		$("form").addClass("error");
 		$("form").before("<div class='alert alert-error'><a class='close' data-dismiss='alert'>&times;</a>"+jsonResult.Message+"</div>");
-		$(".alert").alert()
+		$("div.alert").alert();
 	};
 
 	Markit.QuoteService.prototype.renderResultTable = function(jsonResult){
@@ -139,7 +143,9 @@
 	};
 
 	Markit.QuoteService.prototype.formatChgPct = function(chg){
-		return (chg < 0) ? "-" + chg.toFixed(2) : "+" + chg.toFixed(2);	
+		//the quote API returns negative numbers already,
+		//so we just need to add the + sign to positive numbers
+		return (chg <= 0) ? chg.toFixed(2) : "+" + chg.toFixed(2);	
 	};
 
 </script>
