--- a/StockQuoteSample/index.html
+++ b/StockQuoteSample/index.html
@@ -18,9 +18,7 @@
 				<p><a href="http://dev.markitondemand.com/#stockquote">Read the Stock Quote API documentation</a> or check out <a href="http://dev.markitondemand.com/">our other data APIs</a>.</p>
 
 				<p><iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=markitondemand&amp;type=follow&amp;size=" allowtransparency="true" frameborder="0" scrolling="0" width="177px" height="20px"></iframe> 
-
-				<a href="https://twitter.com/markitondemand" class="twitter-follow-button" data-show-count="false">Follow @markitondemand</a> 
-</p>
+				<a href="https://twitter.com/markitondemand" class="twitter-follow-button" data-show-count="false">Follow @markitondemand</a></p>
 			</div>
 		</div>
 	</div>
