Updating markdotto github button URL

--- a/LookupSample/index.html
+++ b/LookupSample/index.html
@@ -30,7 +30,7 @@
 
 				<p><a href="http://dev.markitondemand.com/#companylookup">Read the Lookup API documentation</a> or check out <a href="http://dev.markitondemand.com/">our other data APIs</a>.</p>
 
-				<p><iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=markitondemand&amp;type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="177px" height="20px"></iframe>
+				<p><iframe src="http://ghbtns.com/github-btn.html?user=markitondemand&type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="177px" height="20px"></iframe>
 				<a href="https://twitter.com/markitondemand" class="twitter-follow-button" data-show-count="false">Follow @markitondemand</a></p>
 			</div>
 		</div>
