--- a/StockQuoteSample/index.html
+++ b/StockQuoteSample/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<title>Markit On Demand Stock Quote API Demo</title>
-	<link rel="stylesheet" href="resources/bootstrap.min.css" />
+	<link rel="stylesheet" href="../Resources/bootstrap/bootstrap-2.3.2.css" />
+	<link rel="stylesheet" href="../Resources/header.css" />
+	<link rel="stylesheet" href="../Resources/footer.css" />
 	<link rel="stylesheet" href="resources/demo.css" />
 	<script type="text/javascript">
 
@@ -20,11 +22,13 @@
 </head>
 <body>
 
-<div class="container">
+<script type="text/javascript" src="../Resources/header.js"></script>
+
+<div class="container web">
 	<div class="row">
 		<div class="span12">
 			<div class="hero-unit">
-				<h2>Markit On Demand &mdash; Stock Quote API Sample</h2>
+				<h2>Stock Quote API Demo</h2>
 
 				<p>The Stock Quote API is useful for determining the current value of a company&rsquo;s stock. The response of this API contains price information for companies traded on the BATS Exchange in the United States. The result set includes the most current trading price of the share, the volume of that company&rsquo;s stock, the change and change percent since the previous day&rsquo;s close, and more.</p>
 
@@ -51,11 +55,11 @@
 	</div>
 </div>
 
-<footer class="footer"><div class="container"><div class="row"><div class="span12"><div class="pull-left"><p>Copyright &copy; <script>document.write(new Date().getFullYear());</script> Markit Group Limited. ALL DATA PROVIDED AS IS, WITH NO WARRANTIES. All rights reserved.</p><ul class="unstyled row-fluid"><li><a target="_blank" href="http://www.markit.com/en/about/legal/privacy-policy.page">Privacy Policy</a></li><li><a class="termsButton" target="_blank" href="http://www.markit.com/en/about/legal/terms-of-use.page">Terms of Use</a></li><li><a target="_blank" href="http://www.markit.com/en/about/legal/disclaimer.page">Disclaimer</a></li><li><a target="_blank" href="http://www.markit.com/en/about/contact/contact-us.page">Contact us</a></li></ul></div><div class="pull-right logo"></div></div></div></div></footer>
+<script type="text/javascript" src="../Resources/footer.js"></script>
 
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-<script type="text/javascript" src="resources/bootstrap.min.js"></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="resources/QuoteService.js"></script>
 <script type="text/javascript">
 
