interactive chart demo

--- a/InteractiveChartSample/index.html
+++ b/InteractiveChartSample/index.html
@@ -31,7 +31,9 @@
 
 				<p>Presented by <a href="http://modl.markit.com">MOD/Labs</a>, the Interactive Chart API is useful for determining the historical value of a company’s stock. The response contains end-of-day historical price information for companies traded on the <a href="http://en.wikipedia.org/wiki/BATS_Global_Markets" target="_blank">BATS Exchange</a> in the United States. The result set includes the name and symbol for the company, as well as a dataset containing open-high-low-close (OHLC) values, labeling helpers, coordinates and more.</p>
 
-				<p><a href="http://dev.markitondemand.com/#doc_interactivechart">Read the Interactive Chart API documentation</a> or check out <a href="http://dev.markitondemand.com/">our other v2 APIs</a>.</p>
+				<p><a href="http://dev.markitondemand.com/#interactive">Read the Interactive Chart API documentation</a> or check out <a href="http://dev.markitondemand.com/">our other v2 APIs</a>.</p>
+
+				<p class="view"><a href="https://github.com/markitondemand/DataApis" class="btn btn-primary">View DataApis on GitHub</a></p>
 
 				<p><iframe src="http://ghbtns.com/github-btn.html?user=markitondemand&amp;type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="177px" height="20px"></iframe>&nbsp;<a href="https://twitter.com/markitondemand" class="twitter-follow-button" data-show-count="false">Follow @markitondemand</a></p>
 			</div>
