--- a/LookupSample/index.html
+++ b/LookupSample/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<title>Markit On Demand Lookup API Demo</title>
-	<link rel="stylesheet" href="resources/bootstrap.min.css" />
+	<link rel="stylesheet" href="../Resources/bootstrap/bootstrap-2.3.2.css" />
+	<link rel="stylesheet" href="../Resources/header.css" />
+	<link rel="stylesheet" href="../Resources/footer.css" />
 	<link rel="stylesheet" href="resources/demo.css" />
 	<script type="text/javascript">
 
@@ -20,24 +22,28 @@
 </head>
 <body>
 
-<div class="container">
+<script type="text/javascript" src="../Resources/header.js"></script>
+
+<div class="container web">
 	<div class="row">
 		<div class="span12">
 			<div class="hero-unit">
-				<h2>Markit On Demand &mdash; Company Lookup API Sample</h2>
+				<h2>Company Lookup API Demo</h2>
 
 				<p>The Company Lookup API is useful for determining the stock ticker or symbol a company&rsquo;s stock is traded with. For example, Google&rsquo;s symbol is <a href="http://www.google.com/finance?q=GOOG">GOOG</a>. Apple&rsquo;s is <a href="http://www.google.com/finance?q=AAPL">AAPL</a>. To use <a href="http://dev.markitondemand.com/">our APIs</a>, a symbol is required as one of the inputs. The Company Lookup API response includes the company&rsquo;s symbol, its full name, and the exchange it&rsquo;s traded on.</p>
 
-				<p><a href="http://dev.markitondemand.com/#companylookup">Read the Lookup API documentation</a> or check out <a href="http://dev.markitondemand.com/">our other data APIs</a>.</p>
+				<p><a href="http://dev.markitondemand.com/#companylookup">Read the Lookup API documentation</a> or check out <a href="http://dev.markitondemand.com/">our other v2 APIs</a>.</p>
 
-				<p><iframe src="http://ghbtns.com/github-btn.html?user=markitondemand&type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="177px" height="20px"></iframe>
+				<p class="view"><a href="https://github.com/markitondemand/DataApis" class="btn btn-primary">View DataApis on GitHub</a></p>
+
+				<p><iframe src="http://ghbtns.com/github-btn.html?user=markitondemand&mp;type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="177px" height="20px"></iframe>
 				<a href="https://twitter.com/markitondemand" class="twitter-follow-button" data-show-count="false">Follow @markitondemand</a></p>
 			</div>
 		</div>
 	</div>
 	<div class="row content">
 		<div class="span12">
-			<h3>Demo</h3>
+			<h3 class="page-header">Demo</h3>
 			
 			<form class="well form-inline">
 				<label>Try typing "Micro" or "GE":</label>
@@ -51,12 +57,12 @@
 	</div>
 </div>
 
-<footer class="footer"><div class="container"><div class="row"><div class="span12"><div class="pull-left"><p>Copyright &copy; <script>document.write(new Date().getFullYear());</script> Markit Group Limited. ALL DATA PROVIDED AS IS, WITH NO WARRANTIES. All rights reserved.</p><ul class="unstyled row-fluid"><li><a target="_blank" href="http://www.markit.com/en/about/legal/privacy-policy.page">Privacy Policy</a></li><li><a class="termsButton" target="_blank" href="http://www.markit.com/en/about/legal/terms-of-use.page">Terms of Use</a></li><li><a target="_blank" href="http://www.markit.com/en/about/legal/disclaimer.page">Disclaimer</a></li><li><a target="_blank" href="http://www.markit.com/en/about/contact/contact-us.page">Contact us</a></li></ul></div><div class="pull-right logo"></div></div></div></div></footer>
+<script type="text/javascript" src="../Resources/footer.js"></script>
 
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-<script type="text/javascript" src="resources/jquery-ui-1.8.17.custom.min.js"></script>
-<script type="text/javascript" src="resources/bootstrap.min.js"></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+<script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 
 <script type="text/javascript">
 
@@ -71,7 +77,7 @@
 							$("span.help-inline").show();
 							$("span.label-info").empty().hide();
 						},
-						url: "http://dev.markitondemand.com/api/Lookup/jsonp",
+						url: "http://dev.markitondemand.com/api/v2/Lookup/jsonp",
 						dataType: "jsonp",
 						data: {
 							input: request.term
@@ -93,10 +99,10 @@
 					$("span.label-info").html("You selected " + ui.item.label).fadeIn("fast");
 				},
 				open: function() {
-					$(this).removeClass("ui-corner-all").addClass("ui-corner-top");
+					//$(this).removeClass("ui-corner-all").addClass("ui-corner-top");
 				},
 				close: function() {
-					$(this).removeClass("ui-corner-top").addClass("ui-corner-all");
+					//$(this).removeClass("ui-corner-top").addClass("ui-corner-all");
 				}
 			})
 		;
