--- a/StockQuoteSample/index.html
+++ b/StockQuoteSample/index.html
@@ -30,7 +30,7 @@
 			<div class="hero-unit">
 				<h2>Stock Quote API Demo</h2>
 
-				<p>The Stock Quote API is useful for determining the current value of a company&rsquo;s stock. The response of this API contains price information for companies traded on the BATS Exchange in the United States. The result set includes the most current trading price of the share, the volume of that company&rsquo;s stock, the change and change percent since the previous day&rsquo;s close, and more.</p>
+				<p>Presented by <a href="http://modl.markit.com">MOD/Labs</a>, the Stock Quote API is useful for determining the current value of a company&rsquo;s stock. The response of this API contains price information for companies traded on the BATS Exchange in the United States. The result set includes the most current trading price of the share, the volume of that company&rsquo;s stock, the change and change percent since the previous day&rsquo;s close, and more.</p>
 
 				<p><a href="http://dev.markitondemand.com/#stockquote">Read the Stock Quote API documentation</a> or check out <a href="http://dev.markitondemand.com/">our other v2 APIs</a>.</p>
 
