--- a/LookupSample/index.html
+++ b/LookupSample/index.html
@@ -30,7 +30,7 @@
 			<div class="hero-unit">
 				<h2>Company Lookup API Demo</h2>
 
-				<p>The Company Lookup API is useful for determining the stock ticker or symbol a company&rsquo;s stock is traded with. For example, Google&rsquo;s symbol is <a href="http://www.google.com/finance?q=GOOG">GOOG</a>. Apple&rsquo;s is <a href="http://www.google.com/finance?q=AAPL">AAPL</a>. To use <a href="http://dev.markitondemand.com/">our APIs</a>, a symbol is required as one of the inputs. The Company Lookup API response includes the company&rsquo;s symbol, its full name, and the exchange it&rsquo;s traded on.</p>
+				<p>Presented by <a href="http://modl.markit.com">MOD/Labs</a>, the Company Lookup API is useful for determining the stock ticker or symbol a company&rsquo;s stock is traded with. For example, Google&rsquo;s symbol is <a href="http://www.google.com/finance?q=GOOG">GOOG</a>. Apple&rsquo;s is <a href="http://www.google.com/finance?q=AAPL">AAPL</a>. To use <a href="http://dev.markitondemand.com/">our APIs</a>, a symbol is required as one of the inputs. The Company Lookup API response includes the company&rsquo;s symbol, its full name, and the exchange it&rsquo;s traded on.</p>
 
 				<p><a href="http://dev.markitondemand.com/#companylookup">Read the Lookup API documentation</a> or check out <a href="http://dev.markitondemand.com/">our other v2 APIs</a>.</p>
 
