--- a/InteractiveChartSample/index.html
+++ b/InteractiveChartSample/index.html
@@ -35,7 +35,7 @@
 
 				<p class="view"><a href="https://github.com/markitondemand/DataApis" class="btn btn-primary">View DataApis on GitHub</a></p>
 
-				<p><iframe src="http://ghbtns.com/github-btn.html?user=markitondemand&amp;type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="177px" height="20px"></iframe>&nbsp;<a href="https://twitter.com/markitondemand" class="twitter-follow-button" data-show-count="false">Follow @markitondemand</a></p>
+				<p><iframe src="http://ghbtns.com/github-btn.html?user=markitondemand&type=follow" allowtransparency="true" frameborder="0" scrolling="0" width="177px" height="20px"></iframe>&nbsp;<a href="https://twitter.com/markitondemand" class="twitter-follow-button" data-show-count="false">Follow @markitondemand</a></p>
 			</div>
 		</div>
 	</div>
